[package]
name = "heartbeat-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
dropshot = { version = "0.8.0", features = ["usdt-probes"] }
http = "0.2.8"
schemars = "0.8.11"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
